<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="false"
    android:orientation="vertical" >

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings" >
        </Button>

        <Button
            android:id="@+id/foods"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/foodItems" >
        </Button>

        <Button
            android:id="@+id/plan"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plan" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/productET"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" >
        </EditText>

        <ImageButton
            android:id="@+id/selectProduct"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/searchImage"
            android:src="@android:drawable/ic_menu_search" >
        </ImageButton>

        <ImageButton
            android:id="@+id/addProduct"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/addImage"
            android:src="@android:drawable/ic_menu_add" >
        </ImageButton>
    </LinearLayout>

    <ListView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>