<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editPlanItemTitle" android:textStyle="bold" android:textIsSelectable="false"></TextView>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" >
        <EditText android:id="@+id/editPlanItemQuatity" android:layout_weight="1" android:layout_width="0dip" android:layout_height="wrap_content" android:ems="10" android:inputType="numberDecimal"></EditText>
        <TextView android:id="@+id/editPlanItemName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/planItemName" />
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content" style="android:attr/buttonBarStyle">
        <Button android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/editPlanItemOK" android:text="@string/ok" style="?android:attr/buttonBarButtonStyle"></Button>
        <Button android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/editPlanItemCancel" android:text="@string/cancel" style="?android:attr/buttonBarButtonStyle"></Button>
    </LinearLayout>
</LinearLayout>